<resources>
    <string name="app_name">Macrolog</string>
    <string name="botnav_diary">Diary</string>
    <string name="botnav_food">Food</string>
    <string name="botnav_dish">Dishes</string>
    <string name="botnav_user">User</string>

    <string name="title_activity_login">Log in</string>
    <string name="title_edit_details">Edit personal details</string>
    <string name="title_adjust_intake">Adjust intake goal</string>

    <string name="notification_channel_name">Reminders</string>
    <string name="notification_channel_id">REMINDERS</string>

    <string name="login_username_email">Username or email</string>
    <string name="login_password">Password</string>
    <string name="login_login">Log in</string>
    <string name="login_register">Register</string>
    <string name="login_email">Email</string>
    <string name="login_username">Username</string>
    <string name="login_failed">Username or password incorrect</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_password_invalid">This password is too short</string>
    <string name="error_field_required">This field is required</string>

    <string name="user_name">Name</string>
    <string name="user_age">Age</string>
    <string name="user_gender">Gender</string>
    <string name="user_height">Height</string>
    <string name="weight">Weight</string>
    <string name="user_activity">Activity level</string>

    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="carbs">Carbs</string>
    <string name="calories">Calories</string>

    <string name="protein_hint">Protein (gr)</string>
    <string name="fat_hint">Fat (gr)</string>
    <string name="carbs_hint">Carbs (gr)</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender_unknown">Unknown</string>
    <string name="activity_level">Activity level</string>

    <string name="change_password">Change password</string>

    <string name="save">Save</string>
    <string name="add">Add</string>

    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="old_same_as_new">Your new password is the same as your old password</string>
    <string name="must_be_same_passwords">The confirmation password does not match with the new password</string>
    <string name="old_password_incorrect">Your old password is incorrect</string>

    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>

    <string name="arrow_left">Arrow left</string>
    <string name="arrow_right">Arrow right</string>

    <string name="p">P</string>
    <string name="f">F</string>
    <string name="c">C</string>
    <string name="kcal">kcal</string>

    <string name="change_macros">Change macros</string>
    <string name="change_calories">Change calories</string>
    <string name="header_curved">Header curved</string>
    <string name="eaten">What did you eat?</string>

    <string name="add_new_food">Add new food</string>
    <string name="add_food_explanation">Fill in the macro\'s per 100 grams</string>
    <string name="food_name">Food name</string>
    <string name="add_portions">Add frequently used portion</string>
    <string name="description">Description</string>
    <string name="grams">Gram</string>

    <string name="search_food">Search food</string>
    <string name="search_dishes">Search dishes</string>

    <string name="intake">Tell us about yourself</string>
    <string name="adjust_intake_title">Set your goal intake</string>
    <string name="adjust_intake_explanation">Fill in your desired amount of macro nutrients, or choose the desired amount of calories.</string>
    <string name="general_error">Something went wrong, try again later</string>
    <string name="about_macrolog">About Macrolog</string>
    <string name="about_content">Macrolog was developed by two software engineers who wanted to get
        in shape. After having used several food tracking applications we got a little tired of
        adds and paid functions that, in our opinion, should be free. So for laughs and learning we
        decided to take it upon ourselves to build a better app.\n\nMacrolog heavily focusses on
        counting macro nutrients instead of counting calories. We believe that knowing what your
        food is made up of and eating the right proportions is ultimately healthier and more
        effective in accomplishing your physical goals than tracking just calories. Now, the
        concept of the \"right\" proportions is somewhat debatable, and what works for one person may
        not work for another. We won\'t pretend to know much about dieting so in the goal intake
        edit section a few calculations and suggestions based on mainstream theory will be done,
        which you are entirely free to ignore.\n\nIn the end, we just want to help you measure.</string>
    <string name="food">Food</string>
    <string name="percentage">Percentage</string>

    <string name="birthday">Birthday</string>
    <string name="height_hint">Height (cm)</string>
    <string name="weight_hint">Weight (kg)</string>

    <string name="forgot_password_link">Forgot your password?</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="forgot_password_description">Please fill in your email so we can send you a newly
        generated password. You can use it within the next half hour to log in and choose a new password.</string>
    <string name="send">Send</string>
    <string name="plus">plus</string>
    <string name="weight_chart">Weight chart</string>
    <string name="current_weight">Current weight</string>
    <string name="date">Date</string>
    <string name="measure_weight">Measure weight</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="date_hint">Date (yyyy-mm-dd)</string>
    <string name="connection_error">No connection available</string>
    <string name="choose_date">Pick a date</string>
    <string name="delete_account">Delete account</string>
    <string name="title_activity_delete_account">DeleteAccountActivity</string>
    <string name="are_you_sure">Are you absolutely sure? Deleting your account will permanently remove all
        your data, including any food added to your database and every log entry in your diary.
        This action is irreversible.\n \n If you still want to proceed, please enter your password.
    </string>
    <string name="running_hamster">Running hamster</string>
    <string name="trash_icon">Trash icon</string>
    <string name="activities">Activities</string>
    <string name="activity_done">What did you do?</string>
    <string name="calories_burned">Calories burned</string>
    <string name="connectivity">Connectivity</string>
    <string name="connect_strava_title">Connect to Strava</string>
    <string name="connect_strava_description">Add activities automatically by connecting Macrolog to Strava!</string>
    <string name="strava_disconnect">Disconnect</string>
    <string name="strava_invalid_rights">Please grant Macrolog access to view your private activities to sync them automatically.</string>
    <string name="strava_view">View on Strava</string>
    <string name="dish_title">Dishes</string>
    <string name="add_dish_explanation">Give your dish a name</string>
    <string name="add_ingredients">Add ingredients to your dish</string>
    <string name="dish_name">Dish name</string>
    <string name="login_not_registered">No account yet?</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_already_registered">Already have an account?</string>
    <string name="error_email_not_found">Email not found</string>
    <string name="error_general">Something went wrong. Try again later.</string>
    <string name="welcome">Welcome</string>
    <string name="thank_you">Thank you for using Macrolog!</string>
    <string name="onboarding_personal_details">First, you will be able to fill in your personal details.
        That way calculations can be made to help you set your goals. </string>
    <string name="onboarding_goals">Next, you can set your food intake goals like your preferred macronutrient ratios
        or calorie amount. </string>
    <string name="onboarding_get_started">Get started</string>
</resources>
