<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <Button
                android:id="@+id/back_button"
                style="@style/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/arrow_back"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/intake_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/assistant_bold"
                android:text="@string/intake"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:backgroundTint="@color/white"
                android:hint="@string/user_name"
                android:inputType="text"
                android:paddingVertical="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/whiteTransparent" />

            <EditText
                android:id="@+id/edit_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:backgroundTint="@color/white"
                android:hint="@string/birthday"
                android:inputType="date"
                android:paddingVertical="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/whiteTransparent" />

            <RadioGroup
                android:id="@+id/radiogroup_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/check_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:text="@string/male"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/check_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:text="@string/female"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RadioGroup>

            <EditText
                android:id="@+id/edit_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:backgroundTint="@color/white"
                android:hint="@string/height_hint"
                android:inputType="number"
                android:paddingVertical="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/whiteTransparent" />

            <EditText
                android:id="@+id/edit_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:backgroundTint="@color/white"
                android:hint="@string/weight_hint"
                android:inputType="number"
                android:paddingVertical="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/whiteTransparent" />

            <Spinner
                android:id="@+id/edit_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:prompt="@string/activity_level"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

            <TextView
                android:id="@+id/form_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/error_field_required"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/savebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_white_background"
                android:fontFamily="@font/assistant_bold"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
